# fastapi-deta

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: deta.yml
app/: main.py  requirements.txt
